[CORE] Tuning the Code